@@ -1,3 +1,10 @@
+2019-06-15 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  src/z80/ralloc2.cc:
+	  Minor register allocation improvement,
+	  fix a --reserve-regs-iy issue.
+
 2019-06-14 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/z80/gen.c,
